--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Hello Rails</h1>
 <h2>Users: </h2>
 <ul>
-  <%= @users.each do |user| %>
-    <li><%= user.name %>
+  <% @users.each do |user| %>
+    <li><%= user.name %></li>
   <% end %>
 </ul>
